Fix header alignment

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -14,6 +14,10 @@ header {
     flex-wrap: wrap;
     margin: 30px 0;
 
+    @include screen-above(mobile) {
+      margin: 0;
+    }
+
     li {
       display: flex;
       margin: 0 8px 8px 0;
