--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -11,7 +11,7 @@
       position: initial;
       font-size: 36px;
       align-self: flex-end;
-      margin: 15px 0;
+      margin: 0;
     }
   }
 
